# rock-qtbindings

./: .gitignore  README.md  Rakefile  extconf.rb  qt5bindings.gemspec  qtbindings.gemspec
.github/workflows/: ruby.yml
examples/: run_all.rb
examples/designer/calculatorbuilder/: calculatorform.rb  main.rb  makefile
examples/designer/calculatorform/: calculatorform.rb  main.rb  makefile
examples/desktop/screenshot/: main.rb  screenshot.rb
examples/desktop/systray/: main.rb  makefile  window.rb
examples/dialogs/complexwizard/: complexwizard.rb  licensewizard.rb  main.rb
examples/dialogs/configdialog/: configdialog.rb  main.rb  pages.rb
examples/dialogs/extension/: finddialog.rb  main.rb
examples/dialogs/findfiles/: window.rb
examples/dialogs/simplewizard/: classwizard.rb  main.rb  simplewizard.rb
examples/dialogs/standarddialogs/: dialog.rb  main.rb
examples/dialogs/tabdialog/: main.rb  tabdialog.rb
examples/draganddrop/draggableicons/: dragwidget.rb  main.rb
examples/draganddrop/draggabletext/: draglabel.rb  dragwidget.rb  main.rb
examples/draganddrop/dropsite/: dropsitewidget.rb  dropsitewindow.rb  main.rb
examples/draganddrop/fridgemagnets/: draglabel.rb  dragwidget.rb  main.rb
examples/draganddrop/puzzle/: main.rb  mainwindow.rb  pieceslist.rb  piecesmodel.rb  puzzlewidget.rb
examples/graphicsview/collidingmice/: main.rb  makefile  mouse.rb
examples/graphicsview/dragdroprobot/: coloritem.rb  main.rb  makefile  robot.rb
examples/itemviews/chart/: main.rb  mainwindow.rb  makefile  pieview.rb
examples/itemviews/dirview/: main.rb
examples/itemviews/pixelator/: imagemodel.rb  main.rb  mainwindow.rb  makefile  pixeldelegate.rb
examples/itemviews/puzzle/: main.rb  piecesmodel.rb  puzzlewidget.rb
examples/itemviews/simpledommodel/: dommodel.rb  main.rb  mainwindow.rb
examples/itemviews/simpletreemodel/: main.rb  makefile  treeitem.rb  treemodel.rb
examples/itemviews/sortingmodel/: main.rb  treemodel.rb
examples/itemviews/spinboxdelegate/: main.rb  spinboxdelegate.rb
examples/killerfilter/: killerfilter.rb
examples/layouts/basiclayouts/: dialog.rb  main.rb
examples/passivepopup/: passivepopup.rb
examples/qtscribble/: scribble.rb
examples/threading/: main_thread.rb
ext/: CMakeLists.txt
ext/generator/: CMakeLists.txt  generatorvisitor.cpp  generatorvisitor.h  type.cpp  type.h  type_compiler.cpp
ext/generator/cmake/: CMakeLists.txt
ext/generator/generators/dump/: CMakeLists.txt
ext/generator/generators/smoke/: CMakeLists.txt  generator_smoke.cpp  globals.h  helpers.cpp  writeClasses.cpp  writeSmokeDataFile.cpp
ext/generator/parser/: CMakeLists.txt  ast.h  codegenerator.cpp  codegenerator.h  default_visitor.cpp  default_visitor.h  dumptree.cpp  kdevvarlengtharray.h  lexer.cpp  name_compiler.cpp  parser.cpp  tokens.cpp  tokens.h  type_compiler.cpp  visitor.cpp  visitor.h
ext/generator/parser/rpp/: CMakeLists.txt  pp-engine.cpp  pp-macro-expander.cpp
ext/generator/parser/rpp/tests/: CMakeLists.txt  main.cpp
ext/generator/parser/tests/: CMakeLists.txt  test_generator.cpp  test_parser.cpp
ext/ruby/: CMakeLists.txt
ext/ruby/qtdeclarative/: CMakeLists.txt  qtdeclarative.cpp  qtdeclarativehandlers.cpp
ext/ruby/qtruby/: README
ext/ruby/qtruby/rails_support/: active_item_model.rb  active_table_model.rb
ext/ruby/qtruby/src/: CMakeLists.txt  Qt.cpp  handlers.cpp  marshall_complex.h  marshall_macros.h  marshall_types.cpp  qtruby.cpp  qtruby.h
ext/ruby/qtruby/test/: unittests.rb
ext/ruby/qtruby/tools/rbrcc/: CMakeLists.txt  main.cpp  rcc.cpp
ext/ruby/qtruby/tools/rbuic/: CMakeLists.txt  Messages.sh  customwidgetsinfo.cpp  databaseinfo.cpp  driver.cpp  main.cpp  option.h  rbuic.pri  rbuic5.pro  ui4.cpp  ui5.cpp  uic.cpp  utils.h
ext/ruby/qtruby/tools/rbuic/ruby/: rbextractimages.cpp  rbwritedeclaration.cpp  rbwriteicondata.cpp  rbwriteiconinitialization.cpp  rbwriteinitialization.cpp
ext/ruby/qtscript/: CMakeLists.txt  qtscript.cpp  qtscript.rb
ext/ruby/qttest/: CMakeLists.txt  qttest.cpp  qttest.rb
ext/ruby/qtuitools/: CMakeLists.txt  qtuitools.cpp  qtuitools.rb
ext/ruby/qtwebkit/: CMakeLists.txt  qtwebkit.cpp  qtwebkit.rb  qtwebkithandlers.cpp
ext/smoke/: CMakeLists.txt  qtprintsupport_smoke.h  qtwidgets_smoke.h  smoke.h
ext/smoke/deptool/: CMakeLists.txt  main.cpp
ext/smoke/qtcore/: CMakeLists.txt  QtGuess.txt  qt-config.xml.cmake  smokeconfig.xml
ext/smoke/qtcore/tests/: CMakeLists.txt  test.cpp
ext/smoke/qtdbus/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtdeclarative/: CMakeLists.txt  qtdeclarative_includes.h  smokeconfig.xml
ext/smoke/qtgui/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qthelp/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtmultimedia/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtnetwork/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtopengl/: CMakeLists.txt  config.xml.cmake  smokeconfig.xml
ext/smoke/qtprintsupport/: CMakeLists.txt  qtprintsupport_includes.h  smokeconfig.xml
ext/smoke/qtscript/: CMakeLists.txt  config.xml.cmake  smokeconfig.xml
ext/smoke/qtsql/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtsvg/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qttest/: CMakeLists.txt  qttest_includes.h  smokeconfig.xml
ext/smoke/qtuitools/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtwebkit/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtwidgets/: CMakeLists.txt  qtwidgets_includes.h  smokeconfig.xml
ext/smoke/qtx11extras/: CMakeLists.txt  qtx11extras_includes.h  smokeconfig.xml
ext/smoke/qtxml/: CMakeLists.txt  smokeconfig.xml
ext/smoke/qtxmlpatterns/: CMakeLists.txt  smokeconfig.xml
ext/smoke/smokeapi/: CMakeLists.txt  main.cpp
ext/smoke/smokebase/: CMakeLists.txt
lib/: Qt4.rb  Qt5.rb  qt5bindings_version.rb  qtbindings_version.rb
lib/Qt/: qtruby4.rb  qtruby5.rb
lib/Qt5/: qtruby5.rb
lib/qtdeclarative5/: qtdeclarative5.rb
lib/qtscript5/: qtscript5.rb
lib/qttest/: qttest5.rb
lib/qttest5/: qttest5.rb
lib/qtuitools5/: qtuitools5.rb
lib/qtwebkit5/: qtwebkit5.rb
qtlib/: qt5bindings-qt.rb  qt5bindings_qt_version.rb
(+156 files in other folders)
